// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable selection should have select-all default to un-checked if no rows are present 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "rows": Array [],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
    }
  }
  rows={Array []}
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table>
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-7__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <InlineCheckbox
                        ariaLabel="Select all rows"
                        checked={false}
                        id="data-table-7__select-all"
                        indeterminate={false}
                        name="select-all"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          className="bx--checkbox"
                          id="data-table-7__select-all"
                          name="select-all"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          aria-label="Select all rows"
                          className="bx--checkbox-label"
                          htmlFor="data-table-7__select-all"
                        />
                      </InlineCheckbox>
                    </th>
                  </TableSelectAll>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody />
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with selection
      </h4>
      <Table>
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-6__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <InlineCheckbox
                        ariaLabel="Select all rows"
                        checked={false}
                        id="data-table-6__select-all"
                        indeterminate={false}
                        name="select-all"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          className="bx--checkbox"
                          id="data-table-6__select-all"
                          name="select-all"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          aria-label="Select all rows"
                          className="bx--checkbox-label"
                          htmlFor="data-table-6__select-all"
                        />
                      </InlineCheckbox>
                    </th>
                  </TableSelectAll>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody>
              <TableRow
                key="b"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                  >
                    <td>
                      <InlineCheckbox
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-b"
                        name="select-row-b"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          className="bx--checkbox"
                          id="data-table-6__select-row-b"
                          name="select-row-b"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          aria-label="Select row"
                          className="bx--checkbox-label"
                          htmlFor="data-table-6__select-row-b"
                        />
                      </InlineCheckbox>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                  >
                    <td>
                      <InlineCheckbox
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-a"
                        name="select-row-a"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          className="bx--checkbox"
                          id="data-table-6__select-row-a"
                          name="select-row-a"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          aria-label="Select row"
                          className="bx--checkbox-label"
                          htmlFor="data-table-6__select-row-a"
                        />
                      </InlineCheckbox>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    id="data-table-6__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                  >
                    <td>
                      <InlineCheckbox
                        ariaLabel="Select row"
                        checked={false}
                        id="data-table-6__select-row-c"
                        name="select-row-c"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          className="bx--checkbox"
                          id="data-table-6__select-row-c"
                          name="select-row-c"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          aria-label="Select row"
                          className="bx--checkbox-label"
                          htmlFor="data-table-6__select-row-c"
                        />
                      </InlineCheckbox>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with toolbar"
  >
    <div
      className="bx--data-table-v2-container"
    >
      <h4
        className="bx--data-table-v2-header"
      >
        DataTable with toolbar
      </h4>
      <TableToolbar>
        <section
          className="bx--table-toolbar"
        >
          <TableToolbarSearch
            id="custom-id"
            onChange={[Function]}
            translateWithId={[Function]}
          >
            <div
              className="bx--toolbar-search-container"
            >
              <Search
                id="custom-id"
                labelText="Filter table"
                light={true}
                onChange={[Function]}
                placeHolderText="Search"
                small={true}
                type="text"
              >
                <div
                  className="bx--search bx--search-with-options bx--search--sm bx--search--light"
                  role="search"
                >
                  <Icon
                    className="bx--search-magnifier"
                    description="Filter table"
                    fillRule="evenodd"
                    name="search"
                    role="img"
                  >
                    <svg
                      alt="Filter table"
                      aria-label="Filter table"
                      className="bx--search-magnifier"
                      fillRule="evenodd"
                      height="16"
                      name="search"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Filter table
                      </title>
                      <path
                        d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zm4.936-1.27l4.563 4.557-.707.708-4.563-4.558a6.5 6.5 0 1 1 .707-.707z"
                        key="key0"
                      />
                    </svg>
                  </Icon>
                  <label
                    className="bx--label"
                    htmlFor="custom-id"
                  >
                    Filter table
                  </label>
                  <input
                    className="bx--search-input"
                    id="custom-id"
                    onChange={[Function]}
                    placeholder="Search"
                    type="text"
                  />
                  <button
                    className="bx--search-close bx--search-close--hidden"
                    onClick={[Function]}
                    type="button"
                  >
                    <Icon
                      description="Provide a description that will be used as the title"
                      fillRule="evenodd"
                      name="close--solid"
                      role="img"
                    >
                      <svg
                        alt="Provide a description that will be used as the title"
                        aria-label="Provide a description that will be used as the title"
                        fillRule="evenodd"
                        name="close--solid"
                        role="img"
                      >
                        <title>
                          Provide a description that will be used as the title
                        </title>
                      </svg>
                    </Icon>
                  </button>
                </div>
              </Search>
            </div>
          </TableToolbarSearch>
          <TableToolbarContent>
            <div
              className="bx--toolbar-content"
            >
              <TableToolbarAction
                iconDescription="Download"
                iconName="download"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                >
                  <Icon
                    className="bx--toolbar-action__icon"
                    description="Download"
                    fillRule="evenodd"
                    name="download"
                    role="img"
                  >
                    <svg
                      alt="Download"
                      aria-label="Download"
                      className="bx--toolbar-action__icon"
                      fillRule="evenodd"
                      height="16"
                      name="download"
                      role="img"
                      viewBox="0 0 14 16"
                      width="14"
                    >
                      <title>
                        Download
                      </title>
                      <path
                        d="M7.506 11.03l4.137-4.376.727.687-5.363 5.672-5.367-5.67.726-.687 4.14 4.374V0h1v11.03z"
                        key="key0"
                      />
                      <path
                        d="M13 15v-2h1v2a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1v-2h1v2h12z"
                        key="key1"
                      />
                    </svg>
                  </Icon>
                </button>
              </TableToolbarAction>
              <TableToolbarAction
                iconDescription="Edit"
                iconName="edit"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                >
                  <Icon
                    className="bx--toolbar-action__icon"
                    description="Edit"
                    fillRule="evenodd"
                    name="edit"
                    role="img"
                  >
                    <svg
                      alt="Edit"
                      aria-label="Edit"
                      className="bx--toolbar-action__icon"
                      fillRule="evenodd"
                      height="16"
                      name="edit"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Edit
                      </title>
                      <path
                        d="M7.926 3.38L1.002 9.72V12h2.304l6.926-6.316L7.926 3.38zm.738-.675l2.308 2.304 1.451-1.324-2.308-2.309-1.451 1.329zM.002 9.28L9.439.639a1 1 0 0 1 1.383.03l2.309 2.309a1 1 0 0 1-.034 1.446L3.694 13H.002V9.28zM0 16.013v-1h16v1z"
                        key="key0"
                      />
                    </svg>
                  </Icon>
                </button>
              </TableToolbarAction>
              <TableToolbarAction
                iconDescription="Settings"
                iconName="settings"
                onClick={[MockFunction]}
              >
                <button
                  className="bx--toolbar-action"
                  onClick={[MockFunction]}
                >
                  <Icon
                    className="bx--toolbar-action__icon"
                    description="Settings"
                    fillRule="evenodd"
                    name="settings"
                    role="img"
                  >
                    <svg
                      alt="Settings"
                      aria-label="Settings"
                      className="bx--toolbar-action__icon"
                      fillRule="evenodd"
                      height="16"
                      name="settings"
                      role="img"
                      viewBox="0 0 15 16"
                      width="15"
                    >
                      <title>
                        Settings
                      </title>
                      <path
                        d="M7.53 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 1a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7z"
                        key="key0"
                      />
                      <path
                        d="M6.268 2.636l-.313.093c-.662.198-1.28.52-1.822.946l-.255.2-1.427-.754-1.214 1.735 1.186 1.073-.104.31a5.493 5.493 0 0 0-.198 2.759l.05.274L1 10.33l1.214 1.734 1.06-.56.262.275a5.5 5.5 0 0 0 2.42 1.491l.312.093L6.472 15H8.59l.204-1.636.313-.093a5.494 5.494 0 0 0 2.21-1.28l.26-.248 1.09.576 1.214-1.734-1.08-.977.071-.29a5.514 5.514 0 0 0-.073-2.905l-.091-.302 1.15-1.041-1.214-1.734-1.3.687-.257-.22a5.487 5.487 0 0 0-1.98-1.074l-.313-.093L8.59 1H6.472l-.204 1.636zM5.48.876A1 1 0 0 1 6.472 0H8.59a1 1 0 0 1 .992.876l.124.997a6.486 6.486 0 0 1 1.761.954l.71-.375a1 1 0 0 1 1.286.31l1.215 1.734a1 1 0 0 1-.149 1.316l-.688.622a6.514 6.514 0 0 1 .067 2.828l.644.581a1 1 0 0 1 .148 1.316l-1.214 1.734a1 1 0 0 1-1.287.31l-.464-.245c-.6.508-1.286.905-2.029 1.169l-.124.997A1 1 0 0 1 8.59 16H6.472a1 1 0 0 1-.992-.876l-.125-.997a6.499 6.499 0 0 1-2.274-1.389l-.399.211a1 1 0 0 1-1.287-.31L.181 10.904A1 1 0 0 1 .329 9.59l.764-.69a6.553 6.553 0 0 1 .18-2.662l-.707-.64a1 1 0 0 1-.148-1.315l1.214-1.734a1 1 0 0 1 1.287-.31l.86.454a6.482 6.482 0 0 1 1.576-.819L5.48.876z"
                        key="key1"
                      />
                    </svg>
                  </Icon>
                </button>
              </TableToolbarAction>
              <Button
                disabled={false}
                iconDescription="Provide icon description if icon is used"
                kind="primary"
                onClick={[MockFunction]}
                small={true}
                tabIndex={0}
                type="button"
              >
                <button
                  className="bx--btn bx--btn--sm bx--btn--primary"
                  disabled={false}
                  onClick={[MockFunction]}
                  tabIndex={0}
                  type="button"
                >
                  Add new
                </button>
              </Button>
            </div>
          </TableToolbarContent>
        </section>
      </TableToolbar>
      <Table>
        <table
          className="bx--data-table-v2 bx--data-table-v2--zebra"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field A
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={true}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <button
                        className="bx--table-sort-v2"
                        onClick={[Function]}
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          Field B
                        </span>
                        <Icon
                          className="bx--table-sort-v2__icon"
                          description="Sort rows by this header in descending order"
                          fillRule="evenodd"
                          name="caret--down"
                          role="img"
                        >
                          <svg
                            alt="Sort rows by this header in descending order"
                            aria-label="Sort rows by this header in descending order"
                            className="bx--table-sort-v2__icon"
                            fillRule="evenodd"
                            height="5"
                            name="caret--down"
                            role="img"
                            viewBox="0 0 10 5"
                            width="10"
                          >
                            <title>
                              Sort rows by this header in descending order
                            </title>
                            <path
                              d="M0 0l5 4.998L10 0z"
                              key="key0"
                            />
                          </svg>
                        </Icon>
                      </button>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody>
            <tbody>
              <TableRow
                key="b"
              >
                <tr>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;
